--- a/styles/style.css
+++ b/styles/style.css
@@ -50,11 +50,13 @@ p {
   font-size: 20px;
   margin-bottom: 16px;
   font-weight: 700;
+  color: hsl(218, 44%, 22%);
 }
 
 .card__subtitle {
   font-size: 15px;
   font-weight: 400;
+  color: hsl(216, 15%, 48%);
 }
 
 @media screen and (max-width: 375px) {
